# alpaca-py-simplified

./: .env.example  .flake8  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
alpaca/broker/: client.py  requests.py
alpaca/broker/models/: accounts.py  cip.py  documents.py
alpaca/common/: enums.py  exceptions.py  rest.py  utils.py
alpaca/data/: __init__.py  crypto_helper.py  news_helper.py  option_helper.py  stock_helper.py  timeframe.py
alpaca/data/historical/: crypto.py  option.py  screener.py  stock.py  utils.py
alpaca/data/live/: websocket.py
alpaca/data/models/: bars.py  base.py  corporate_actions.py  orderbooks.py  quotes.py  snapshots.py  trades.py
alpaca/trading/: account_helper.py  client.py  models.py  requests.py  stream.py  trading_helper.py
docs/: simplified_account_api.md  simplified_crypto_data_api.md  simplified_news_api.md  simplified_option_api.md  simplified_stock_data_api.md  simplified_trading_api.md
examples/: account_helper_example.py  crypto_helper_example.py  news_helper_example.py  option_helper_example.py  stock_helper_example.py  trading_helper_example.py
tests/data/: test_crypto_helper.py  test_news_helper.py  test_option_helper.py  test_stock_helper.py
tests/trading/: test_account_helper.py  test_trading_helper.py
tools/scripts/: generate-docs.sh
